--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "swiper": "^11.0.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/swiper": "^6.0.0",
     "@vitejs/plugin-vue": "^5.0.3",
     "vite": "^5.0.11"
   }
